# cmake_rosbe

./: CMakeLists.txt  prepare-source.cmake
patches/cmake/: 0001-Mark-this-as-ReactOS-modified-source.patch  0002-Account-for-XP-compatibility-when-linking-the-CMake-.patch  0002-Do-not-compute-architecture-specific-link-flags-when.patch  0003-Add-source-file-properties-EXTERNAL_SOURCE-and-OBJEC.patch  0003-Empty-IncludePath-ReferencePath-LibraryPath-LibraryW.patch  0003-Improve-the-check-for-MSVC.patch  0004-Don-t-let-CMake-map-SECTION-and-MERGE-link-flags-as-.patch  0004-Revert-Add-OBJECT_FILE_DIR-rule-placeholder-for-comp.patch  0005-Ninja-Do-not-generate-circular-phony-rules-15454.patch  0005-VS-PCH-flag-Yc-can-be-used-without-a-value-so-don-t-.patch  0006-Do-not-compute-architecture-specific-link-flags-when.patch  0006-Don-t-let-CMake-handle-CharacterSet.-Same-for-Precom.patch  0006-Empty-IncludePath-ReferencePath-LibraryPath-LibraryW.patch  0007-Don-t-let-CMake-handle-CharacterSet.-Same-for-Precom.patch  0007-We-do-not-need-to-create-alias-targets-about-the-out.patch  0008-ninja-Store-target-level-flags-in-a-variable.patch  0009-ninja-Factor-out-target-level-definitions.patch  0010-ninja-Fix-and-refactor-variable-name-escaping.patch  0011-Simplify-EscapeTargetForVariable-and-apply-a-naming-.patch  0012-Improve-the-check-for-MSVC.patch  0013-Add-the-NOOP-trick-to-handle-OBJECT_OUTPUTS-with-nin.patch  0014-Don-t-let-CMake-map-SECTION-and-MERGE-link-flags-as-.patch  0015-VS-PCH-flag-Yc-can-be-used-without-a-value-so-don-t-.patch  0016-Empty-IncludePath-ReferencePath-LibraryPath-LibraryW.patch  0017-Don-t-let-CMake-handle-CharacterSet.-Same-for-Precom.patch
patches/gcc/: 0001-texi2pod.pl-Force-.pod-file-to-not-be-a-numbered-lis.patch  0002-https-github.com-DragonFlyBSD-DPorts-commit-a680cc6e.patch
